--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-    <h2>Hello Word</h2>
-    <p>This is new repos</p>
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <main class="main">
+      <input id="input" class="input" type="text" />
+      <div id="root" class="wrapper"></div>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
