--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,6 @@
       <input id="input" class="input" type="text" placeholder="start typing" />
       <div id="root" class="wrapper"></div>
     </main>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
